My name and role to display on the webpage
I introduced myself with my name and the role displaying these on the webpage. This is so that hiring managers can view my website

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -5,8 +5,19 @@
         <meta name="description" content="My website will showcase my accomplishments and projects"  />
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
-
+        <link href="../css/stylesheet.css" rel="stylesheet" />
     </head>    
 
-    
+    <body> 
+        <h1 class="name">MN</h1>
+
+        <div id="intro">
+
+            <h2>Hello, my name is Meraj Nushin </h2>
+            <p class="role" style="margin-top: -2%">Aspired Software Engineer / Web Developer<p>
+
+        </div>
+
+    </body>
+
 </html>
