I have added an images directory since I am trying to display social media platforms somewhere on the webpage

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -14,8 +14,7 @@
         <div id="intro">
 
             <h2>Hello, my name is Meraj Nushin </h2>
-            <p class="role" style="margin-top: -2%">Aspired Software Engineer / Web Developer<p>
-
+            <p class="role" style="margin-top: -2%">Aspired Software Engineer / Web Developer</p>
         </div>
 
     </body>
