--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -9,12 +9,26 @@
     </head>    
 
     <body> 
-        <h1 class="name">MN</h1>
+
+        <div class="top-page">
+            <h1 class="name">MN</h1>
+        </div>
+
+        </div>
 
         <div id="intro">
-
-            <h2>Hello, my name is Meraj Nushin </h2>
+            <h2> Hello, my name is Meraj Nushin </h2>
             <p class="role" style="margin-top: -2%">Aspired Software Engineer / Web Developer</p>
+        </div>
+
+        <div class="images"> 
+            <a href="https://www.linkedin.com/in/meraj-nushin-715082159/" target="_blank">
+                <img id="link" title="linkedin" src="../images/linkedin.png" width="50" height="50" />
+            </a>
+
+            <a href="https://github.com/mnushin102" target="_blank">
+                <img id="github" title="github" src="../images/github.png" width="50" height="50" />
+            </a>
         </div>
 
     </body>
