Add each inline name each with a link to their webpages of the website
I placed links to separate pages for About Me, Contact, Projects, and Skills in the current page of the website. Hiring managers will be able to click on any of the links to a webpage within the same tab

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -11,9 +11,17 @@
     <body> 
 
         <div class="top-page">
-            <h1 class="name">MN</h1>
-        </div>
-
+            <h1 id="name">MN</h1>
+            <div class="nav-bar">
+                <nav>
+                    <ul>
+                        <li> <a href="about-me.html"> About Me </a> </li>
+                        <li> <a href="contact.html"> Contact </a> </li>
+                        <li> <a href="projects.html"> Projects </a> </li>
+                        <li> <a href="skills.html"> Skills </a> </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <div id="intro">
@@ -27,7 +35,7 @@
             </a>
 
             <a href="https://github.com/mnushin102" target="_blank">
-                <img id="github" title="github" src="../images/github.png" width="50" height="50" />
+                <img id="git" title="github" src="../images/github.png" width="50" height="50" />
             </a>
         </div>
 
