--- a/html/home.html
+++ b/html/home.html
@@ -2,6 +2,8 @@
 <html>
 
     <head>
+        <meta charset="utf-80" />
+        <meta name="viewpoint" content="width=device-width"/>
         <meta name="description" content="My website will showcase my accomplishments and projects"  />
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
@@ -15,18 +17,22 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="about-me.html"> About Me </a> </li>
-                        <li> <a href="contact.html"> Contact </a> </li>
-                        <li> <a href="projects.html"> Projects </a> </li>
-                        <li> <a href="skills.html"> Skills </a> </li>
+                        <div class="nav-layout">
+                            <li> <a id="nav" href="about-me.html" > About Me </a> </li>
+                            <li> <a id="nav" href="contact.html"> Contact </a> </li>
+                            <li> <a id="nav" href="projects.html"> Projects </a> </li>
+                            <li> <a id="nav" href="skills.html"> Skills </a> </li>
+                        </div>
                     </ul>
                 </nav>
             </div>
         </div>
 
-        <div id="intro">
-            <h2> Hello, my name is Meraj Nushin </h2>
-            <p class="role" style="margin-top: -2%">Aspired Software Engineer / Web Developer</p>
+        <div class="background">
+            <div class="intro">
+                <h2> Hello, my name is Meraj Nushin </h2>
+                <p class="role">Aspired Software Engineer / Web Developer</p>
+            </div>
         </div>
 
         <div class="images"> 
