Add a stylish layout for the about-me section on the webpage
On the about-me section of the website, I have styled the header as well as the paragraphs of the inner border. While I added a list of elements for the two paragraphs, I edited these paragraphs various ways such as the lining height for these. I have also edited the margins of these paragraphs within the border so that these can be readable for users that visit the website

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -15,16 +15,16 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="about-me.html"> About Me </a> </li>
-                        <li> <a href="contact.html"> Contact </a> </li>
-                        <li> <a href="projects.html"> Projects </a> </li>
-                        <li> <a href="skills.html"> Skills </a> </li>
+                        <li> <a id="nav" href="about-me.html"> About Me </a> </li>
+                        <li> <a id="nav" href="contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
         </div>
 
-        <div class="person" >
+        <div class="bio" >
             <h1 id="about-me">About Me</h1>
             <div class="description">
                 <p> 
@@ -32,12 +32,12 @@
                     often like to do during my spare time is playing video games. I also love being a streamer that I play a variety of games on YouTube, such as Red Dead Redemption 2, 
                     Resident Evil games, and other survival horror games on the channel. That's when I entered into the world of programming with C++ when I took a class at a community college. 
                     It turns out I have grew my passion in programming since I played video games from my childhood. 
-                    
-                    <br /> <br /> 
+                </p>
+                <p>
                     
                     Eventually, I found my passion in being a web developer when I participated in a senior project with my group. 
                     While I worked with my group, I learned new technologies HTML, CSS, and JavaScript for web development. Apparently the name 
-                    of the senior was called <q>Text-to-DB</q>. This project is about having new users to add, modify, and delete databases from 
+                    of the senior project was called, <q>Text-to-<abbr title="Database">DB</abbr>.</q> This project allows new users to add, modify, and delete databases from 
                     our website. If you want to dive into these details, click on the projects link to view the project on my GitHub page.
 
                 </p>
