--- a/html/home.html
+++ b/html/home.html
@@ -31,7 +31,7 @@
         <div class="background">
             <div class="intro">
                 <h2> Hello, my name is Meraj Nushin </h2>
-                <p class="role">Aspired Software Engineer / Web Developer</p>
+                <p class="role"> Software Engineer / Web Developer</p>
             </div>
         </div>
 
