Contact details must be displayed on the website
I placed my email address and my phone number for the Contact segment so that new visitors will be able to find these for important inquiries

--- a/html/contact.html
+++ b/html/contact.html
@@ -15,13 +15,35 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="about-me.html"> About Me </a> </li>
-                        <li> <a href="contact.html"> Contact </a> </li>
-                        <li> <a href="projects.html"> Projects </a> </li>
-                        <li> <a href="skills.html"> Skills </a> </li>
+                        <li> <a id="nav" href="about-me.html"> About Me </a> </li>
+                        <li> <a id="nav" href="contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
         </div>
+
+        <section class="contact">
+            <h1 id="contact-header">Contact</h1>
+
+            <div class="contact-details">
+                <h2>Contact Details:</h2>
+
+                <p id="email-address"> 
+                    Email Address:  
+                    <span class="email">
+                        <a href="emailto:meraj.nushin102@gmail.com"> meraj.nushin102@gmail.com </a>
+                    </span>
+                </p>
+
+                <p id="phone-number">
+                    Phone Number:
+                    <span class="phone">
+                        (925)-550-2036
+                    </span>
+                </p>
+            </div>
+        </section>
     </body>
 </html>
