I updated the paragraphs in the about-me segment since I changed the attribute for the <p> element from id to class attribute

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -27,13 +27,13 @@
         <div class="bio" >
             <h1 id="about-me">About Me</h1>
             <div class="description">
-                <p id="paragraph"> 
+                <p class="paragraph"> 
                     Hello everyone, I am a recent graduate with a Bachelor's degree earned from California State University, Long Beach. One of my hobbies that I 
                     often like to do during my spare time is playing video games. I also love being a streamer that I play a variety of games on YouTube, such as Red Dead Redemption 2, 
                     Resident Evil games, and other survival horror games on the channel. That's when I entered into the world of programming with C++ when I took a class at a community college. 
                     It turns out I have grew my passion in programming since I played video games from my childhood. 
                 </p>
-                <p id="paragraph">
+                <p class="paragraph">
                     
                     Eventually, I found my passion in being a web developer when I participated in a senior project with my group. 
                     While I worked with my group, I learned new technologies HTML, CSS, and JavaScript for web development. Apparently the name 
