--- a/html/contact.html
+++ b/html/contact.html
@@ -28,12 +28,12 @@
             <h1 id="contact-header">Contact</h1>
 
             <div class="contact-details">
-                <h2>Contact Details:</h2>
+                <h2 id="contact-sub-header">Contact Details:</h2>
 
                 <p id="email-address"> 
                     Email Address:  
                     <span class="email">
-                        <a href="emailto:meraj.nushin102@gmail.com"> meraj.nushin102@gmail.com </a>
+                        <a href="mailto:meraj.nushin102@gmail.com" target="_self"> meraj.nushin102@gmail.com </a>
                     </span>
                 </p>
 
@@ -43,7 +43,16 @@
                         (925)-550-2036
                     </span>
                 </p>
+
+                <h2>
+                    Connect with me on Linkedin: 
+                <h2>
+
+                <a href="https://www.linkedin.com/in/meraj-nushin-715082159/" target="_blank">
+                    <img src="../images/linkedin.png" alt="linkedin" title="linkedin" width="80" height="80" />
+                </a>
             </div>
+
         </section>
     </body>
 </html>
