An image of myself displayed on the homepage of the website
In the homepage, I included an image of myself so that new visitors can see how I look like

--- a/html/home.html
+++ b/html/home.html
@@ -28,11 +28,16 @@
             </div>
         </div>
 
+        <div class="picture">
+            <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
+        </div>
+
         <div class="background">
             <div class="intro">
                 <h2> Hello, my name is Meraj Nushin </h2>
                 <p class="role"> Software Engineer / Web Developer</p>
             </div>
+            
         </div>
 
         <!-- 
