--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <h1 id="contact-header">Contact</h1>
 
             <div class="contact-details">
-                <h2 id="contact-sub-header">Contact Details:</h2>
+                <h2 id="contact-sub-header" style="text-decoration:underline">Contact Details:</h2>
 
                 <p id="email-address"> 
                     Email Address:  
@@ -44,12 +44,12 @@
                     </span>
                 </p>
 
-                <h2>
+                <h2 style="text-decoration: underline;">
                     Connect with me on Linkedin: 
                 <h2>
 
                 <a href="https://www.linkedin.com/in/meraj-nushin-715082159/" target="_blank">
-                    <img src="../images/linkedin.png" alt="linkedin" title="linkedin" width="80" height="80" />
+                    <img src="../images/linkedin.png" alt="linkedin" title="linkedin" width="150" height="150" />
                 </a>
             </div>
 
