I have made changes to correct each directory path in all files

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta name="description" content="My website will showcase my accomplishments and projects"  />
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
-        <link href="../css/stylesheet.css" rel="stylesheet" />
+        <link href="/stylesheet.css" rel="stylesheet" />
     </head>    
 
     <body> 
@@ -15,10 +15,10 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a id="nav" href="about-me.html"> About Me </a> </li>
-                        <li> <a id="nav" href="contact.html"> Contact </a> </li>
-                        <li> <a id="nav" href="projects.html"> Projects </a> </li>
-                        <li> <a id="nav" href="skills.html"> Skills </a> </li>
+                        <li> <a id="nav" href="/about-me.html"> About Me </a> </li>
+                        <li> <a id="nav" href="/contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="/projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="/skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
@@ -49,7 +49,7 @@
                 <h2>
 
                 <a href="https://www.linkedin.com/in/meraj-nushin-715082159/" target="_blank">
-                    <img src="../images/linkedin.png" alt="linkedin" title="linkedin" width="150" height="150" />
+                    <img src="/linkedin.png" alt="linkedin" title="linkedin" width="150" height="150" />
                 </a>
             </div>
 
