Fixing the proper links with the correct file path

--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
         <meta name="description" content="My website will showcase my accomplishments and projects"  />
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
-        <link href="/stylesheet.css" rel="stylesheet" />
+        <link href="../css/stylesheet.css" rel="stylesheet" />
     </head>    
 
     <body> 
@@ -18,10 +18,10 @@
                 <nav>
                     <ul>
                         <div class="nav-layout">
-                            <li> <a id="nav" href="/about-me.html" > About Me </a> </li>
-                            <li> <a id="nav" href="/contact.html"> Contact </a> </li>
-                            <li> <a id="nav" href="/projects.html"> Projects </a> </li>
-                            <li> <a id="nav" href="/skills.html"> Skills </a> </li>
+                            <li> <a id="nav" href="./about-me.html" > About Me </a> </li>
+                            <li> <a id="nav" href="./contact.html"> Contact </a> </li>
+                            <li> <a id="nav" href="./projects.html"> Projects </a> </li>
+                            <li> <a id="nav" href="./skills.html"> Skills </a> </li>
                         </div>
                     </ul>
                 </nav>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="picture">
-            <img id="image" src="/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
+            <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
         </div>
 
         <div class="background">
