--- a/html/projects.html
+++ b/html/projects.html
@@ -5,7 +5,7 @@
         <meta name="description" content="My website will showcase my accomplishments and projects"  />
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
-        <link href="/stylesheet.css" rel="stylesheet" />
+        <link href="../css/stylesheet.css" rel="stylesheet" />
     </head>    
 
     <body> 
@@ -15,10 +15,10 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="/about-me.html"> About Me </a> </li>
-                        <li> <a href="/contact.html"> Contact </a> </li>
-                        <li> <a href="/projects.html"> Projects </a> </li>
-                        <li> <a href="/skills.html"> Skills </a> </li>
+                        <li> <a href="./about-me.html"> About Me </a> </li>
+                        <li> <a href="./contact.html"> Contact </a> </li>
+                        <li> <a href="./projects.html"> Projects </a> </li>
+                        <li> <a href="./skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
