--- a/html/projects.html
+++ b/html/projects.html
@@ -15,13 +15,21 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="./about-me.html"> About Me </a> </li>
-                        <li> <a href="./contact.html"> Contact </a> </li>
-                        <li> <a href="./projects.html"> Projects </a> </li>
-                        <li> <a href="./skills.html"> Skills </a> </li>
+                        <li> <a id="nav" href="./about-me.html"> About Me </a> </li>
+                        <li> <a id="nav" href="./contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="./projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="./skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
         </div>
+
+        <section class="project">
+
+            <div class="list_of_projects">
+                <h1 id="project-header">Projects - Coming Soon</h1>
+            </div>
+
+        </section>
     </body>
 </html>
