--- a/html/skills.html
+++ b/html/skills.html
@@ -15,10 +15,10 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li> <a href="./about-me.html"> About Me </a> </li>
-                        <li> <a href="./contact.html"> Contact </a> </li>
-                        <li> <a href="./projects.html"> Projects </a> </li>
-                        <li> <a href="./skills.html"> Skills </a> </li>
+                        <li> <a id="nav" href="./about-me.html"> About Me </a> </li>
+                        <li> <a id="nav" href="./contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="./projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="./skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
