Displaying images of skills/technologies on the skills section
The file directories for programming languages and frameworks consisting of images has been added to this project. After this commit, I'll start displaying these images on the skills webpage

--- a/html/skills.html
+++ b/html/skills.html
@@ -23,5 +23,22 @@
                 </nav>
             </div>
         </div>
+
+        <h1 id="skills-header"> Skills </h1>
+
+        <section class="programming-languages">
+
+            <div class="tech-lang">
+
+                <h2 id="pro-lang-sub-header">Programming Languages</h2>
+
+                <div class="images">
+                    
+                    <img  />
+                </div>
+
+            </div>
+
+        </section>
     </body>
 </html>
