Logos of technical languages must be displayed under the second header. I inserted each image from the pro-lang file directory onto the skills segement of the website, enabeling these to be displayed to hiring managers

--- a/html/skills.html
+++ b/html/skills.html
@@ -30,11 +30,49 @@
 
             <div class="tech-lang">
 
-                <h2 id="pro-lang-sub-header">Programming Languages</h2>
+                <br /> <br /> <br />
 
-                <div class="images">
-                    
-                    <img  />
+                <h2 id="pro-lang-sub-header" style="text-align:center;">Programming Languages</h2>
+
+                <div id="pro-images">
+
+                    <nav>
+                        <ul id="pro-images-1">
+                            <li> 
+                                <img src="../images/pro-lang/java-logo.png" alt="java" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/python-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/c++-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/sql-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/swift-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/html-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/css-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/javascript-logo.png" alt="python" width="100" height="100" />
+                            </li>
+                                   
+                        </ul>
+                    </nav>
+
                 </div>
 
             </div>
