--- a/html/skills.html
+++ b/html/skills.html
@@ -47,27 +47,27 @@
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/c++-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/c++-logo.png" alt="c++" width="100" height="100" />
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/sql-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/sql-logo.png" alt="sql" width="100" height="100" />
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/swift-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/swift-logo.png" alt="swift" width="100" height="100" />
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/html-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/html-logo.png" alt="html" width="100" height="100" />
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/css-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/css-logo.png" alt="css" width="100" height="100" />
                             </li>
 
                             <li>
-                                <img src="../images/pro-lang/javascript-logo.png" alt="python" width="100" height="100" />
+                                <img src="../images/pro-lang/javascript-logo.png" alt="javascript" width="100" height="100" />
                             </li>
                                    
                         </ul>
