--- a/html/skills.html
+++ b/html/skills.html
@@ -32,12 +32,12 @@
 
                 <br /> <br /> <br />
 
-                <h2 id="pro-lang-sub-header" style="text-align:center;">Programming Languages</h2>
+                <h2 id="lang-sub-header">Programming Languages</h2>
 
                 <div id="pro-images">
 
                     <nav>
-                        <ul id="pro-images-1">
+                        <ul id="box-of-lang" style="gap:50px;">
                             <li> 
                                 <img src="../images/pro-lang/java-logo.png" alt="java" width="100" height="100" />
                             </li>
@@ -70,6 +70,42 @@
                                 <img src="../images/pro-lang/javascript-logo.png" alt="javascript" width="100" height="100" />
                             </li>
                                    
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <br /><br /><br />
+
+                <h2 id="lang-sub-header"> Frameworks </h2>
+                <div id="frame-lang">
+
+                    <nav>
+                        <ul id="box-of-lang" style="gap:90px">
+                            <li>
+                                <img src="../images/frameworks/react-logo.png" alt="react" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/nodejs-logo.png" alt="node.js" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/mongodb-logo.png" alt="mongodb" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/docker-logo.png" alt="docker" width="200" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/aws-logo.png" alt="aws" width="150" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/linux-logo.png" alt="linux" width="100" height="100" />
+                            </li>
+
                         </ul>
                     </nav>
 
