Implement a browser tab icon displayed on the tab
I've added a broswer tab icon included with the initials for my first and last name

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -6,6 +6,7 @@
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
         <link href="../css/stylesheet.css" rel="stylesheet" />
+        <link href="../images/initials.jpg" rel="icon" />
     </head>    
 
     <body> 
