--- a/html/skills.html
+++ b/html/skills.html
@@ -6,6 +6,7 @@
         <meta http-equiv="author" content="Meraj Nushin" />
         <title> Portfolio Website </title>
         <link href="../css/stylesheet.css" rel="stylesheet" />
+        <link href="../images/initials.jpg" rel="icon" />
     </head>    
 
     <body> 
