Resume to include in the home page
Resume has been included ontot the homepage of the portfolio website. To view the resume, a visitor of the site must click on the header named 'resume' inside the gray border

--- a/html/home.html
+++ b/html/home.html
@@ -29,17 +29,24 @@
             </div>
         </div>
 
-        <div class="picture">
-            <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
+        <div class="box">
+            <h3> 
+                <a href="../resume/resume1.pdf" alt="resume" target="_blank">Resume</a>
+            </h3>
         </div>
 
-        <div class="background">
-            <div class="intro">
-                <h2> Hello, my name is Meraj Nushin </h2>
-                <p class="role"> Software Engineer / Web Developer</p>
+        <section class="introduction">
+            <div class="picture">
+                <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
             </div>
-            
-        </div>
+
+            <div class="background">
+                <div class="intro">
+                    <h2> Hello, my name is Meraj Nushin </h2>
+                    <p class="role"> Software Engineer / Web Developer</p>
+                </div>
+            </div>
+        </section> 
 
         <!-- 
         <div class="images"> 
