--- a/html/projects.html
+++ b/html/projects.html
@@ -26,11 +26,60 @@
         </div>
 
         <section class="project">
-
+            <h1 id="project-header">Projects</h1>
             <div class="list_of_projects">
-                <h1 id="project-header">Projects - Coming Soon</h1>
-            </div>
+                <ul>
+                    <li>
+                        <div class="project">
+                            <a id="git-links" href="https://github.com/mnushin102/Text-to-DB" target="_blank">
+                                <img id="external-links" src="/images/external-link.png" alt="external link" width="50" height="50" style="margin:4px 10px 40px;" /> 
+                            </a>
+                            <img src="/images/github.png" alt="github" width="100" height="100" style="margin-left:140px;"/> 
+                            <h3 id="project-portfolio"> Text-to-Database </h3> 
+                            <p id="project_description">
+                                This project involves working with various databases through the website created
+                                by me and my groupmates. If any user wishes to add a database, then any visitor of the website
+                                must create an account using the login and password. A user can also modify a certain data in any existing
+                                databases, or delete it at their discretion through our website. 
+                            </p>
 
+                            <div class="images">
+
+                                <div class="project_tech">
+                                    <img alt="html-logo" src="/images/pro-lang/html-logo.png" width="100" height="100" />
+                                    <img alt="css-logo" src="/images/pro-lang/css-logo.png" width="100" height="100" />
+                                    <img alt="javascript-logo" src="/images/pro-lang/javascript-logo.png" width="100" height="100" />
+                                </div>
+
+                                <div class="project_tech2" style="margin-left:135px">
+                                    <img alt="mongodb-logo" src="/images/frameworks/mongodb-logo.png" width="100" height="100" />
+                                    <img alt="nodejs-logo" src="/images/frameworks/nodejs-logo.png" width="100" height="100" />
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li> 
+                        <div class="project">
+                            <a id="git-links" href="https://github.com/mnushin102/Tic-Tac-Toe" target="_blank"> 
+                                <img id="external-links" src="/images/external-link.png" alt="external link" width="50" height="50" style="margin:4px 10px 50px;" /> 
+                            </a> 
+                            <img src="/images/tic-tac-toe.1024x1024.png" alt="tic-tac-toe" width="100" height="100" style="margin:10px auto auto 120px;" />
+                            <h3 id="project-portfolio"> Tic-Tac-Toe </h3> 
+                            <p id="project_description">
+                                I am currently working on this project named, <q>Tic-Tac-Toe,</q> these technologies listed below:
+                            </p>
+
+                            <div class="images">
+                                <div class="project_tech">
+                                    <img alt="html-logo" src="/images/pro-lang/html-logo.png" width="100" height="100" />
+                                    <img alt="css-logo" src="/images/pro-lang/css-logo.png" width="100" height="100" />
+                                    <img alt="javascript-logo" src="/images/pro-lang/javascript-logo.png" width="100" height="100" />
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </body>
 </html>
