Move the navagatiion links to the near top right corner of the screen
I have managed to move these links to the top right hand corner of each browser on the website

--- a/html/home.html
+++ b/html/home.html
@@ -15,15 +15,16 @@
 
         <div class="top-page">
             <h1 id="name">MN</h1>
+        </div>
+
+        <div class="top-page">
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <div class="nav-layout">
-                            <li> <a id="nav" href="./about-me.html" > About Me </a> </li>
-                            <li> <a id="nav" href="./contact.html"> Contact </a> </li>
-                            <li> <a id="nav" href="./projects.html"> Projects </a> </li>
-                            <li> <a id="nav" href="./skills.html"> Skills </a> </li>
-                        </div>
+                        <li> <a id="nav" href="./about-me.html" > About Me </a> </li>
+                        <li> <a id="nav" href="./contact.html"> Contact </a> </li>
+                        <li> <a id="nav" href="./projects.html"> Projects </a> </li>
+                        <li> <a id="nav" href="./skills.html"> Skills </a> </li>
                     </ul>
                 </nav>
             </div>
