I have put all of the code from previous html files, about-me, contact, projects, and skills into the home.html file. This is so that this can be displayed as a single webpage.

--- a/html/home.html
+++ b/html/home.html
@@ -31,17 +31,210 @@
         </div>
 
         <section class="introduction">
+
             <div class="picture">
-                <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="300" height="300"/>
+                <img id="image" src="../images/IMG_8616 copy.jpg" alt="meraj" width="400" height="400"/>
             </div>
 
-            <div class="background">
-                <div class="intro">
-                    <h2> Hello, my name is Meraj Nushin </h2>
-                    <p class="role"> Software Engineer / Web Developer</p>
-                </div>
-            </div>
         </section> 
+
+        <section class="about_me">
+        <div class="bio" >
+            <h1 id="about-me" style="font-size:30px;">About Me</h1>
+            <div class="description">
+                <p class="paragraph"> 
+
+                    Hello everyone, I am a recent graduate with a Bachelor's degree earned from California State University, Long Beach. One of my hobbies that I 
+                    often like to do during my spare time is playing video games. I also love being a streamer that I play a variety of games on YouTube, such as Red Dead Redemption 2, 
+                    Resident Evil games, and other survival horror games on the channel. That's when I entered into the world of programming with C++ when I took a class at a community college. 
+                    It turns out I have grew my passion in programming since I played video games from my childhood. 
+
+                </p>
+                <p class="paragraph">
+                    
+                    Eventually, I found my passion in being a web developer when I participated in a senior project with my group. 
+                    While I worked with my group, I learned new technologies HTML, CSS, and JavaScript for web development. Apparently the name 
+                    of the senior project was called, <q>Text-to-<abbr title="Database">DB</abbr>.</q> This project allows new users to add, modify, and delete databases from 
+                    our website. If you want to dive into these details, click on the projects link to view the project on my GitHub page.
+
+                </p>
+            </div>
+        </div>
+
+        <section class="project">
+            <h1 id="project-header">Projects</h1>
+            <div class="list_of_projects">
+                <ul>
+                    <li>
+                        <div class="project">
+                            <a id="git-links" href="https://github.com/mnushin102/Text-to-DB" target="_blank">
+                                <img id="external-links" src="../images/external-link.png" alt="external link" width="50" height="50" style="margin:4px 10px 40px;" /> 
+                            </a>
+                            <img src="../images/github.png" alt="github" width="100" height="100" style="margin-left:140px;"/> 
+                            <h3 id="project-portfolio"> Text-to-Database </h3> 
+                            <p id="project_description">
+                                This project involves working with various databases through the website created
+                                by me and my groupmates. If any user wishes to add a database, then any visitor of the website
+                                must create an account using the login and password. A user can also modify a certain data in any existing
+                                databases, or delete it at their discretion through our website. 
+                            </p>
+
+                            <div class="images">
+
+                                <div class="project_tech">
+                                    <img alt="html-logo" src="../images/pro-lang/html-logo.png" width="100" height="100" />
+                                    <img alt="css-logo" src="../images/pro-lang/css-logo.png" width="100" height="100" />
+                                    <img alt="javascript-logo" src="../images/pro-lang/javascript-logo.png" width="100" height="100" />
+                                </div>
+
+                                <div class="project_tech2" style="margin-left:135px">
+                                    <img alt="mongodb-logo" src="../images/frameworks/mongodb-logo.png" width="100" height="100" />
+                                    <img alt="nodejs-logo" src="../images/frameworks/nodejs-logo.png" width="100" height="100" />
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li> 
+                        <div class="project">
+                            <a id="git-links" href="https://github.com/mnushin102/Tic-Tac-Toe" target="_blank"> 
+                                <img id="external-links" src="../images/external-link.png" alt="external link" width="50" height="50" style="margin:4px 10px 50px;" /> 
+                            </a> 
+                            <img src="../images/tic-tac-toe.1024x1024.png" alt="tic-tac-toe" width="100" height="100" style="margin:10px auto auto 120px;" />
+                            <h3 id="project-portfolio"> Tic-Tac-Toe </h3> 
+                            <p id="project_description">
+                                I am currently working on this project named, <q>Tic-Tac-Toe,</q> these technologies listed below:
+                            </p>
+
+                            <div class="images">
+                                <div class="project_tech">
+                                    <img alt="html-logo" src="../images/pro-lang/html-logo.png" width="100" height="100" />
+                                    <img alt="css-logo" src="../images/pro-lang/css-logo.png" width="100" height="100" />
+                                    <img alt="javascript-logo" src="../images/pro-lang/javascript-logo.png" width="100" height="100" />
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="programming-languages">
+            <h1 id="skills-header" style="font-size:30px;"> Skills </h1>
+            <div class="tech-lang">
+
+                <br /> <br /> <br />
+
+                <h2 id="lang-sub-header">Programming Languages</h2>
+
+                <div id="pro-images">
+
+                    <nav>
+                        <ul id="box-of-lang" style="gap:50px;">
+                            <li> 
+                                <img src="../images/pro-lang/java-logo.png" alt="java" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/python-logo.png" alt="python" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/c++-logo.png" alt="c++" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/sql-logo.png" alt="sql" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/swift-logo.png" alt="swift" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/html-logo.png" alt="html" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/css-logo.png" alt="css" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/pro-lang/javascript-logo.png" alt="javascript" width="100" height="100" />
+                            </li>
+                                   
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <br /><br /><br />
+
+                <h2 id="lang-sub-header"> Frameworks </h2>
+                <div id="frame-lang">
+
+                    <nav>
+                        <ul id="box-of-lang" style="gap:90px">
+                            <li>
+                                <img src="../images/frameworks/react-logo.png" alt="react" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/nodejs-logo.png" alt="node.js" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/mongodb-logo.png" alt="mongodb" width="100" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/docker-logo.png" alt="docker" width="200" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/aws-logo.png" alt="aws" width="150" height="100" />
+                            </li>
+
+                            <li>
+                                <img src="../images/frameworks/linux-logo.png" alt="linux" width="100" height="100" />
+                            </li>
+
+                        </ul>
+                    </nav>
+
+                </div>
+
+            </div>
+        </section>
+
+        <section class="contact">
+            <h1 id="contact-header">Contact</h1>
+
+            <div class="contact-details">
+                <h2 id="contact-sub-header" style="text-decoration:underline">Contact Details:</h2>
+
+                <p id="email-address"> 
+                    Email Address:  
+                    <span class="email">
+                        <a href="mailto:meraj.nushin102@gmail.com" target="_self"> meraj.nushin102@gmail.com </a>
+                    </span>
+                </p>
+
+                <p id="phone-number">
+                    Phone Number:
+                    <span class="phone">
+                        (925)-550-2036
+                    </span>
+                </p>
+
+                <h2 style="text-decoration: underline;">
+                    Connect with me on Linkedin: 
+                <h2>
+
+                <a href="https://www.linkedin.com/in/meraj-nushin-715082159/" target="_blank">
+                    <img src="../images/linkedin.png" alt="linkedin" title="linkedin" width="150" height="150" />
+                </a>
+            </div>
+        </section>
     </body>
 
 </html>
