Added spacing between About Me and Projects sections

--- a/html/home.html
+++ b/html/home.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <section class="project">
+        <section class="project" style="margin-top:100px">
             <h1 id="project-header">Projects</h1>
             <div class="list_of_projects">
                 <ul>
